added user login and register

--- a/src/SimpleShopping/angularapp/src/app/user-register/user-register.component.html
+++ b/src/SimpleShopping/angularapp/src/app/user-register/user-register.component.html
@@ -1,1 +1,88 @@
-<p>user-register works!</p>
+<section class="vh-100" style="background-color: #eee;">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-lg-12 col-xl-11">
+          <div class="card text-black" style="border-radius: 25px;">
+            <div class="card-body p-md-5">
+              <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+            
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                 <h2 style="color:red;" *ngIf="errormessage">Something went wrong please try again!</h2>
+                  <form class="mx-1 mx-md-4" [formGroup]="registerForm" (ngSubmit)="Register()">
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input formControlName="fullName" name="fullName" type="text" class="form-control" />
+                        <label class="form-label" >Your Full Name  <span style="color: red;" *ngIf="fullNameValid && fullNameValid.invalid && fullNameValid.touched">Full name input is not valid!</span></label>
+                    </div>
+                    
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input formControlName="email" name="email" type="email"  class="form-control" />
+                        <label class="form-label" >Your Email <span style="color: red;" *ngIf="emailValid && emailValid.invalid && emailValid.touched">Email input is not valid!</span></label>
+                      </div>
+                    </div>
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input formControlName="phone" name="phone" type="tel"  class="form-control" />
+                        <label class="form-label" >Phone <span style="color: red;" *ngIf="phoneValid && phoneValid.invalid && phoneValid.touched">Phone input is not valid!</span></label>
+                      </div>
+                    </div>
+                    
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input formControlName="shortAddress" name="shortAddress"  type="text"  class="form-control" />
+                        <label class="form-label" >Address</label>
+                      </div>
+                    </div>
+                    
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input formControlName="password" name="password" type="password" class="form-control" />
+                        <label class="form-label" >Password <span style="color: red;" *ngIf="passwordValid && passwordValid.invalid && passwordValid.touched">Password input is not valid!</span></label>
+                      </div>
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        <input formControlName="confirmPassword" name="confirmPassword" type="password"  class="form-control" />
+                        <label class="form-label">Repeat your password <span style="color: red;" *ngIf="confirmPasswordValid && confirmPasswordValid.invalid && confirmPasswordValid.touched">Password confirmation input is not valid!</span></label>
+                      </div>
+                    </div>
+  
+                    <!-- <div class="form-check d-flex justify-content-center mb-5">
+                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+                      <label class="form-check-label" for="form2Example3">
+                        I agree all statements in <a href="#!">Terms of service</a>
+                      </label>
+                    </div> -->
+                    <span *ngIf="passwordMathValid && passwordMathValid" style="color: red;">Passwords do not match</span>
+                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                      <button [disabled]="registerForm.invalid" type="submit" class="btn btn-primary btn-lg">Register</button>
+                    </div>
+  
+                  </form>
+  
+                </div>
+                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+  
+                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                    class="img-fluid" alt="Sample image">
+  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
