--- a/src/SimpleShopping/angularapp/src/app/navbar/navbar.component.html
+++ b/src/SimpleShopping/angularapp/src/app/navbar/navbar.component.html
@@ -1,21 +1,25 @@
-<header class="p-3 text-bg-dark">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-
-        <ul class="nav nav-pills col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #023a35;">
+    <div class="container-fluid">
+        <a class="navbar-brand" routerLink="/">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          
           <li class="nav-item">
-            <a routerLink="/"  routerLinkActive="active" class="nav-link px-2 text-white">Main</a>
-        </li>
+            <a class="nav-link" routerLinkActive="customActive" routerLink="/login">Login</a>
+          </li>
           <li class="nav-item">
-            <a routerLink="/category" routerLinkActive="active"  class="nav-link px-2 text-white">Category</a>
-        </li>
+            <a class="nav-link" routerLinkActive="customActive" routerLink="/register">Register</a>
+          </li>
           
         </ul>
-
-        <div class="text-end">
-          <a routerLink="/login" type="button" class="btn btn-outline-light me-2">Login</a>
-          <a routerLink="/register" type="button" class="btn btn-warning">Sign-up</a>
-        </div>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
     </div>
-  </header>
+  </nav>
+
