--- a/src/SimpleShopping/angularapp/src/app/navbar/navbar.component.css
+++ b/src/SimpleShopping/angularapp/src/app/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 .customActive{
-    color:rgb(255, 255, 255) !important;
+    color: rgb(212, 3, 3) !important;
     transition: 0.5s;
-    text-shadow: rgb(217, 233, 248) 1px 0 15px;
+    text-shadow: 0px 0px 27px rgba(138, 10, 10, 0.9);
 }
