--- a/src/SimpleShopping/angularapp/src/app/user-login/user-login.component.html
+++ b/src/SimpleShopping/angularapp/src/app/user-login/user-login.component.html
@@ -1,11 +1,14 @@
-<section class="vh-100">
+<div class="min-vh-100">
     <div class="container-fluid h-custom">
-      <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="row d-flex justify-content-center align-items-center margintop h-100">
         <div class="col-md-9 col-lg-6 col-xl-5">
           <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <h4 *ngIf="clientError !=''" style="color: rgb(133, 3, 3);">
+            {{clientError}}
+        </h4>
           <form [formGroup]="loginForm" (ngSubmit)="login()">
            
             <!-- Email input -->
@@ -45,4 +48,4 @@
       </div>
     </div>
    
-  </section>
+  </div>
