--- a/src/SimpleShopping/angularapp/src/app/orders/orders.component.html
+++ b/src/SimpleShopping/angularapp/src/app/orders/orders.component.html
@@ -1,1 +1,1 @@
-<p>orders works!</p>
+<button (click)="openDialog()" class="btn btn-danger"><span><i class="bi bi-trash"></i></span> Delete</button>
