--- a/src/SimpleShopping/angularapp/src/app/products/products.component.html
+++ b/src/SimpleShopping/angularapp/src/app/products/products.component.html
@@ -1,1 +1,65 @@
-<p>products works!</p>
+<div class="customvh75">
+    <table class="table table-dark table-striped table-hover"> 
+        <thead>
+            <tr style="background-color: red;">
+            <th>Manage products</th>
+            <td colspan="2"></td>
+            <th></th>
+            <th><button class="btn btn-success"><span><i class="bi bi-plus-circle"></i></span> Add product</button></th>
+            </tr>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Product name</th>
+              <th scope="col">Product price</th>
+              <th scope="col">Category</th>
+              <th scope="col">Action</th>
+            </tr>
+          </thead>
+          <tbody class="table-group-divider" style="border-top-color: red">
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+              <td><button class="btn btn-primary me-2"><span><i class="bi bi-pencil"></i></span> Edit</button>
+              <button class="btn btn-danger"><span><i class="bi bi-trash"></i></span> Delete</button></td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+              <td><button class="btn btn-primary me-2"><span><i class="bi bi-pencil"></i></span> Edit</button>
+                <button (click)="openDialog()" class="btn btn-danger"><span><i class="bi bi-trash"></i></span> Delete</button></td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+              <td><button class="btn btn-primary me-2"><span><i class="bi bi-pencil"></i></span> Edit</button>
+                <button class="btn btn-danger"><span><i class="bi bi-trash"></i></span> Delete</button></td>
+            </tr>
+          </tbody>
+      </table>
+      <div class="paginatedFixed">
+        <nav  aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+              <li class="page-item disabled">
+                <a class="page-link">Previous</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item active"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
+    </div>
+</div>
+
+
+
+
+ 
